# ROS2-Self-Driving-Car-AI-using-OpenCV

./: .gitignore  Commands.txt  Environment_Setup_Issues.txt  README.md  computer_vision_node.py  requirements_python.txt  requirements_ros.txt
Repo_resources/: How_to_run_the_project.txt  (+3 more)
self_driving_car_pkg/: computer_vision_node.py  main_final.py  main_mini.py  package.xml  setup.cfg  setup.py
self_driving_car_pkg/Control/: Motors_control.py
self_driving_car_pkg/Detection/Lanes/: setup.py
self_driving_car_pkg/data/: saved_model_Ros2.h5
self_driving_car_pkg/launch/: gazebo_opening.py  maze_solving_world.launch.py  proper_gazebo.launch.py  record_and_drive.launch.py  self_driving.launch.py  self_driving_car.launch.py  spawning.launch.py  spawning.py  test_T_junc_Nav.launch.py  test_laneFollow.launch.py  world_gazebo.launch.py
self_driving_car_pkg/scripts/: light.bash  lights_spawner.bash
self_driving_car_pkg/self_driving_car_pkg/: Display.py  Drive_Bot.py  Drive_bot.py  Navigate_to_Home.py  Navigation.py  computer_vision_node.py  drive_node.py  main_final.py  main_mini.py  maze_Solver.py  py_node.py  sdc_V2.py  sdc_V2_mp.py  sdf_spawner.py  upper_camera_video.py  video_save.py
self_driving_car_pkg/self_driving_car_pkg copy/: Guide_to_run_Sat-Nav_on_SDC.md
self_driving_car_pkg/worlds/: Lane_follow_test.world  T_Junc_Nav_test.world  basic_circuit.world  light_turn_signs.world  maze_solving.world  sdc.world  self_driving_car.world  self_driving_car__.world  test_abs_path.world  test_abs_path1.world
self_driving_car_pkg_models/: CMakeLists.txt  package.xml
(+287 files in other folders)
