<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_driving_car_pkg</name>
  <version>1.0.0</version>
  <description>This package is to run your ROS simulation with a prius model from gazebo with SDC features</description>
  <maintainer email="noshluk2@gmail.com">luqman</maintainer>
  <license>GNU-GPL</license>

  <depend>rclpy</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
